Added arrow_left and arrow_right to index.html inside a div Added style to .banner-infos, with width at 96%, flexbox, justify-content, to get everything in different sides

--- a/assets/style.css
+++ b/assets/style.css
@@ -132,6 +132,12 @@ header {
 #banner .arrow_right {
 	right: 10px;
 }
+.banner-infos {
+  width: 96%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 /* Gestion des points du carrousel */
 .dots {
 	position: absolute;
